# apollo

./: .gitignore  README.md  package-lock.json
backend/: BACKEND_ARCHITECTURE.md  README.md  env.template  pyproject.toml  run_server.py
backend/database/: __init__.py  crud.py  models.py
backend/misc/: flax_pattern.py
backend/server/: config.py  dependencies.py  main.py  routes.py
backend/server/models/: model_registry.py  tokenizer.py
chat/: package-lock.json  package.json
chat/app/: globals.css  layout.tsx  page.tsx  types.ts
chat/app/components/: ChatInterface.module.css  ChatInterface.tsx  Sidebar.module.css  Sidebar.tsx
engine/: BACKEND_ARCHITECTURE.md  README.md  env.template  pyproject.toml  run_server.py
engine/database/: connection.py  crud.py  models.py  schemas.py
engine/helpers/: inspect_weights.py
engine/models/gemma/: _config.py  _gemma.py  _math.py
engine/models/gemma/helpers/: basic_inference.py  inspect_weights.py  test_tokenizer.py
engine/server/: __init__.py  config.py  dependencies.py  main.py  routes.py
inference/: pyproject.toml
inference/models/: __init__.py  load_model.py  model_registry.py
inference/models/gemma/: .gitignore  README.md  __init__.py  _config.py  _gemma.py
inference/models/gemma/helpers/: basic_inference.py  inspect_weights.py
inference/server/: config.py  dependencies.py  main.py  routes.py  schemas.py
