[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "flax>=0.12.2",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "kagglehub>=0.4.0",
    "orbax-checkpoint>=0.11.31",
    "pydantic>=2.12.5",
    "sentencepiece>=0.2.0",
]
