[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "flax>=0.12.2",
    "jax>=0.8.2",
    "jaxlib>=0.8.2",
    "kagglehub>=0.4.0",
    "orbax-checkpoint>=0.11.31",
    "sentencepiece>=0.2.0",
    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.1",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Utilities
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    # Monitoring
    "prometheus-client>=0.21.1",
    "aiosqlite>=0.22.1",
]
